Cambiado el titulo de la pagina

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Porfolio - Puri</title>
+    <title>Porfolio - PuriDev</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header class="header">
       <div class="group">
-        <div class="logo"><a class="logo__link" href="#">Web</a></div>
+        <div class="logo"><a class="logo__link" href="#">PuriDev</a></div>
         <div class="toggle" id="toggle-menu">
           <div class="toggle__menu"></div>
         </div>
