--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
         </div>
         <nav class="navegation" id="navegation">
           <ul class="menu">
-            <li class="menu__item"><a class="menu__link" href="inicio.html">Inicio</a></li>
-            <li class="menu__item"><a class="menu__link" href="sobre-mi.html">Sobre mi</a></li>
-            <li class="menu__item"><a class="menu__link" href="conocimiento.html">Conocimiento</a></li>
-            <li class="menu__item"><a class="menu__link" href="proyecto.html">Proyecto</a></li>
-            <li class="menu__item"><a class="menu__link" href="contacto.html">Contacto</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Inicio</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Sobre mi</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Conocimiento</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Proyecto</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Contacto</a></li>
           </ul>
         </nav>
       </div>
